--- a/demos/publish/index.html
+++ b/demos/publish/index.html
@@ -54,7 +54,7 @@
       <div id="createResults" style="display:none">
         <div id="createDisplay"></div>
         <br>
-        <label for="username">Name for published Solution</label> <input type="text" id="solutionName"><br>
+        <label for="username">Name for published Solution</label> <input type="text" id="solutionName" style="width:256px"><br>
         <button id="publishBtn" onclick="publishSolutionFcn()">Publish solution</button>
       </div>
     </div>
