--- a/demos/deploy/index.html
+++ b/demos/deploy/index.html
@@ -29,7 +29,7 @@
       <label for="destUsername">Username:</label> <input type="text" id="destUsername">
       <label for="destPassword">Password:</label> <input type="password" id="destPassword">
       <label for="destPortal">Portal:</label>
-      <input type="text" id="destPortal" style="width:256px" placeholder="https://www.arcgis.com/sharing/rest">
+      <input type="text" id="destPortal" style="width:256px" placeholder="https://myorg.maps.arcgis.com">
     </div>
 
     <div id="availableSolutions" class="section">
@@ -118,7 +118,7 @@
       // Prepare credentials for destination
       destinationRequestOptions = demoCommon.getRequestOptions(
         document.getElementById('destUsername').value, document.getElementById('destPassword').value,
-        document.getElementById('destPortal').value || 'https://www.arcgis.com/sharing/rest');
+        document.getElementById('destPortal').value + '/sharing/rest');
 
       // Get the destination organization URL for creating links to deployed items
       arcgis_rest_request.getPortal(null, destinationRequestOptions)
@@ -133,9 +133,10 @@
               portalBaseUrl: 'https://' + portalResponse.portalHostname
             }
           };
+          var solutionTemplateItemDef = arcgis_rest_items.getItem(currentSolutionId, destinationRequestOptions);
 
           // Get the solution contents
-          arcgis_rest_items.getItemData(currentSolutionId)
+          arcgis_rest_items.getItemData(currentSolutionId, destinationRequestOptions)
           .then(
             publishedSolution => {
 
@@ -145,12 +146,19 @@
               var progressCallback =
                 _createProgressCallback(arcgis_clone_js.getEstimatedDeploymentCost(publishedSolution.templates));
 
-              arcgis_clone_js.deploySolution(publishedSolution.templates, destinationRequestOptions,
-                settings, progressCallback)
+              Promise.all([  // TODO IE11 does not support Promise
+                arcgis_clone_js.deploySolution(publishedSolution.templates, destinationRequestOptions,
+                  settings, progressCallback),
+                solutionTemplateItemDef
+              ])
               .then(
-                deployedSolution => {
+                function (responses) {
+                  progressCallback("deployed Solution");
+                  var deployedSolution = responses[0];
+                  var templateItem = responses[1];
+
                   // Create a deployed Solution item as a table of contents for the created items
-                  arcgis_clone_js.createDeployedSolutionItem(currentSolutionName, deployedSolution,
+                  arcgis_clone_js.createDeployedSolutionItem(currentSolutionName, deployedSolution, templateItem,
                     destinationRequestOptions, settings, "public")
                   .then(
                     deployedSolutionItem  => {
