--- a/demos/deploy/index.html
+++ b/demos/deploy/index.html
@@ -48,7 +48,6 @@
         <br>
         <button id="createBtn" onclick="deploySolutionFcn()">Create solution in your organization</button>
         using name <input type="text" id="solutionNameField" style="width:256px">
-        <input type="checkbox" id="runLinearly"> Linear
       </div>
     </div>
 
@@ -63,7 +62,7 @@
 
   </div>
 
-  <script src="../demo_common/require_2.3.6.min.js"></script>
+  <script src="../lib/require_2.3.6.min.js"></script>
   <script src="../lib/arcgis-rest-auth.js"></script>
   <script src="../lib/arcgis-rest-items.js"></script>
   <script src="../lib/arcgis-rest-request.js"></script>
@@ -149,7 +148,6 @@
                 2 + // for creating deployed Solution item
                 arcgis_clone_js.getEstimatedDeploymentCost(publishedSolution.templates));
 
-              settings.linear = document.getElementById('runLinearly').checked;
               Promise.all([  // TODO IE11 does not support Promise
                 arcgis_clone_js.deploySolution(publishedSolution.templates, destinationRequestOptions,
                   settings, progressCallback),
