Updated paths in demos

--- a/demos/publish/index.html
+++ b/demos/publish/index.html
@@ -73,7 +73,7 @@
 
   </div>
 
-  <script src="../demo_common/require_2.3.6.min.js"></script>
+  <script src="../lib/require_2.3.6.min.js"></script>
   <script src="../lib/arcgis-rest-auth.js"></script>
   <script src="../lib/arcgis-rest-items.js"></script>
   <script src="../lib/arcgis-rest-request.js"></script>
