Switched to CDN for arcgis-rest-js

--- a/demos/deploy/index.html
+++ b/demos/deploy/index.html
@@ -62,11 +62,12 @@
 
   </div>
 
-  <script src="../lib/require_2.3.6.min.js"></script>
-  <script src="../lib/arcgis-rest-auth.js"></script>
-  <script src="../lib/arcgis-rest-items.js"></script>
-  <script src="../lib/arcgis-rest-request.js"></script>
+  <script src="https://cdn.polyfill.io/v2/polyfill.js?features=es5,Promise,fetch"></script>
+  <script src="https://unpkg.com/@esri/arcgis-rest-auth@1.16.1/dist/umd/auth.umd.js"></script>
+  <script src="https://unpkg.com/@esri/arcgis-rest-items@1.16.1/dist/umd/items.umd.js"></script>
+  <script src="https://unpkg.com/@esri/arcgis-rest-request@1.16.1/dist/umd/request.umd.js"></script>
   <script src="../lib/arcgis-clone-js.js"></script>
+  <script src="../lib/require_2.3.6.min.js"></script>
   <script>
   var showSolutionFcn = deploySolutionFcn = null;
   var currentSolutionId, currentSolutionName, currentSolutionItems;
@@ -122,7 +123,7 @@
         document.getElementById('destPortal').value + '/sharing/rest');
 
       // Get the destination organization URL for creating links to deployed items
-      arcgis_rest_request.getPortal(null, destinationRequestOptions)
+      arcgisRest.getPortal(null, destinationRequestOptions)
       .then(
         portalResponse => {
           currentSolutionName = document.getElementById('solutionNameField').value || currentSolutionName;
@@ -134,10 +135,10 @@
               portalBaseUrl: 'https://' + portalResponse.portalHostname
             }
           };
-          var solutionTemplateItemDef = arcgis_rest_items.getItem(currentSolutionId, destinationRequestOptions);
+          var solutionTemplateItemDef = arcgisRest.getItem(currentSolutionId, destinationRequestOptions);
 
           // Get the solution contents
-          arcgis_rest_items.getItemData(currentSolutionId, destinationRequestOptions)
+          arcgisRest.getItemData(currentSolutionId, destinationRequestOptions)
           .then(
             publishedSolution => {
 
